Fix screen overflow when advanced filters were open

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -935,6 +935,9 @@ i.has-tooltip {
         box-shadow: $shadowModuleHard;
         max-height: 70vh;
         overflow-y: auto;
+        &.allow-overflow {
+            overflow: visible;
+        }
     }
 
     &-inner:not(.popover-inner) {
@@ -960,7 +963,7 @@ i.has-tooltip {
     &[data-popper-placement^='top'] {
         padding-bottom: 8px;
 
-        .tooltip-arrow {
+        > .wrapper > .tooltip-arrow {
             border-bottom-width: 0;
             border-top-color: $divider;
             bottom: 3px;
@@ -979,7 +982,7 @@ i.has-tooltip {
     &[data-popper-placement^='bottom'] {
         padding-top: 8px;
 
-        .tooltip-arrow {
+        > .wrapper > .tooltip-arrow {
             border-top-width: 0;
             border-bottom-color: $divider;
             top: 3px;
@@ -998,7 +1001,7 @@ i.has-tooltip {
     &[data-popper-placement^='right'] {
         padding-left: 8px;
 
-        .tooltip-arrow {
+        > .wrapper > .tooltip-arrow {
             border-left-width: 0;
             border-right-color: $divider;
             top: 0;
@@ -1017,7 +1020,7 @@ i.has-tooltip {
     &[data-popper-placement^='left'] {
         padding-right: 8px;
 
-        .tooltip-arrow {
+        > .wrapper > .tooltip-arrow {
             border-right-width: 0;
             border-left-color: $divider;
             top: 0;
